-- ============================================================================
-- AQC-Core — estimation data model (logical ERD / schema)
-- Generated by SchemaExport.BuildSql() from the live registries; regenerate from
-- the app (Item links -> Export ERD). Portable ANSI-ish DDL.
-- Two item relationships: derivation (trade -> link_rule -> derived_item) and
-- composition (trade / mix_design -> material).
-- ============================================================================

CREATE TABLE trade (
    key           VARCHAR(64) NOT NULL,
    display       VARCHAR(128),
    unit          VARCHAR(16),
    default_basis VARCHAR(16),
    CONSTRAINT pk_trade PRIMARY KEY (key)
);
CREATE TABLE project (
    id              VARCHAR(64) NOT NULL,
    name            VARCHAR(255),
    format_version  INTEGER,
    CONSTRAINT pk_project PRIMARY KEY (id)
);
CREATE TABLE level (
    id                 VARCHAR(64) NOT NULL,
    project_id         VARCHAR(64) NOT NULL,
    name               VARCHAR(128),
    height_mm          INTEGER,
    slab_thickness_mm  INTEGER,
    beam_depth_mm      INTEGER,
    CONSTRAINT pk_level PRIMARY KEY (id),
    CONSTRAINT fk_level_project FOREIGN KEY (project_id) REFERENCES project (id)
);
CREATE TABLE takeoff_item (
    id           VARCHAR(64) NOT NULL,
    project_id   VARCHAR(64) NOT NULL,
    trade_key    VARCHAR(64) NOT NULL,
    mark         VARCHAR(64),
    level_id     VARCHAR(64),
    length_m     DOUBLE PRECISION,
    breadth_m    DOUBLE PRECISION,
    height_m     DOUBLE PRECISION,
    area_m2      DOUBLE PRECISION,
    volume_m3    DOUBLE PRECISION,
    qty          DOUBLE PRECISION,
    unit         VARCHAR(16),
    source       VARCHAR(32),
    source_mark  VARCHAR(64),
    notes        TEXT,
    CONSTRAINT pk_takeoff_item PRIMARY KEY (id),
    CONSTRAINT fk_takeoff_project FOREIGN KEY (project_id) REFERENCES project (id),
    CONSTRAINT fk_takeoff_trade   FOREIGN KEY (trade_key)  REFERENCES trade (key),
    CONSTRAINT fk_takeoff_level   FOREIGN KEY (level_id)   REFERENCES level (id)
);
CREATE TABLE link_rule (
    id            VARCHAR(64) NOT NULL,
    project_id    VARCHAR(64) NOT NULL,
    name          VARCHAR(255),
    enabled       BOOLEAN,
    source_trade  VARCHAR(64) NOT NULL,
    target_trade  VARCHAR(64) NOT NULL,
    basis         VARCHAR(16),
    factor        DOUBLE PRECISION,
    target_unit   VARCHAR(16),
    per_item      BOOLEAN,
    rate_code     VARCHAR(64),
    rate_override DOUBLE PRECISION,
    notes         TEXT,
    CONSTRAINT pk_link_rule PRIMARY KEY (id),
    CONSTRAINT fk_rule_project FOREIGN KEY (project_id)   REFERENCES project (id),
    CONSTRAINT fk_rule_source  FOREIGN KEY (source_trade) REFERENCES trade (key),
    CONSTRAINT fk_rule_target  FOREIGN KEY (target_trade) REFERENCES trade (key)
);
CREATE TABLE derived_item (
    id            VARCHAR(64) NOT NULL,
    rule_id       VARCHAR(64) NOT NULL,
    source_trade  VARCHAR(64) NOT NULL,
    source_mark   VARCHAR(64),
    level_id      VARCHAR(64),
    source_qty    DOUBLE PRECISION,
    basis         VARCHAR(16),
    factor        DOUBLE PRECISION,
    target_trade  VARCHAR(64) NOT NULL,
    target_qty    DOUBLE PRECISION,
    target_unit   VARCHAR(16),
    chained       BOOLEAN,
    CONSTRAINT pk_derived_item PRIMARY KEY (id),
    CONSTRAINT fk_derived_rule   FOREIGN KEY (rule_id)      REFERENCES link_rule (id),
    CONSTRAINT fk_derived_source FOREIGN KEY (source_trade) REFERENCES trade (key),
    CONSTRAINT fk_derived_target FOREIGN KEY (target_trade) REFERENCES trade (key),
    CONSTRAINT fk_derived_level  FOREIGN KEY (level_id)     REFERENCES level (id)
);
CREATE TABLE material (
    key       VARCHAR(64) NOT NULL,
    name      VARCHAR(255),
    unit      VARCHAR(16),
    category  VARCHAR(32),
    CONSTRAINT pk_material PRIMARY KEY (key)
);
CREATE TABLE mix_design (
    key         VARCHAR(64) NOT NULL,
    kind        VARCHAR(16),
    grade       VARCHAR(32),
    dry_factor  DOUBLE PRECISION,
    note        VARCHAR(255),
    CONSTRAINT pk_mix_design PRIMARY KEY (key)
);
CREATE TABLE mix_component (
    id            VARCHAR(64) NOT NULL,
    mix_key       VARCHAR(64) NOT NULL,
    material_key  VARCHAR(64) NOT NULL,
    parts         DOUBLE PRECISION,
    CONSTRAINT pk_mix_component PRIMARY KEY (id),
    CONSTRAINT fk_mixcomp_mix      FOREIGN KEY (mix_key)      REFERENCES mix_design (key),
    CONSTRAINT fk_mixcomp_material FOREIGN KEY (material_key) REFERENCES material (key)
);
CREATE TABLE trade_material (
    id            VARCHAR(64) NOT NULL,
    trade_key     VARCHAR(64) NOT NULL,
    material_key  VARCHAR(64) NOT NULL,
    via_mix_key   VARCHAR(64),
    note          VARCHAR(255),
    CONSTRAINT pk_trade_material PRIMARY KEY (id),
    CONSTRAINT fk_trademat_trade    FOREIGN KEY (trade_key)    REFERENCES trade (key),
    CONSTRAINT fk_trademat_material FOREIGN KEY (material_key) REFERENCES material (key),
    CONSTRAINT fk_trademat_mix      FOREIGN KEY (via_mix_key)  REFERENCES mix_design (key)
);
CREATE TABLE rate_book_version (
    id     VARCHAR(64) NOT NULL,
    name   VARCHAR(255),
    notes  TEXT,
    CONSTRAINT pk_rate_book_version PRIMARY KEY (id)
);
CREATE TABLE rate_item (
    id           VARCHAR(64) NOT NULL,
    version_id   VARCHAR(64) NOT NULL,
    code         VARCHAR(64),
    category     VARCHAR(128),
    description  VARCHAR(255),
    unit         VARCHAR(16),
    rate         DOUBLE PRECISION,
    CONSTRAINT pk_rate_item PRIMARY KEY (id),
    CONSTRAINT uq_rate_item_code UNIQUE (version_id, code),
    CONSTRAINT fk_rate_item_version FOREIGN KEY (version_id) REFERENCES rate_book_version (id)
);
CREATE TABLE estimate (
    id                    VARCHAR(64) NOT NULL,
    project_id            VARCHAR(64) NOT NULL,
    rate_book_version_id  VARCHAR(64),
    base_total            DOUBLE PRECISION,
    grand_total           DOUBLE PRECISION,
    CONSTRAINT pk_estimate PRIMARY KEY (id),
    CONSTRAINT fk_estimate_project FOREIGN KEY (project_id)           REFERENCES project (id),
    CONSTRAINT fk_estimate_version FOREIGN KEY (rate_book_version_id) REFERENCES rate_book_version (id)
);
CREATE TABLE estimate_line (
    id            VARCHAR(64) NOT NULL,
    estimate_id   VARCHAR(64) NOT NULL,
    rate_item_id  VARCHAR(64),
    code          VARCHAR(64),
    category      VARCHAR(128),
    description   VARCHAR(255),
    unit          VARCHAR(16),
    qty           DOUBLE PRECISION,
    rate          DOUBLE PRECISION,
    amount        DOUBLE PRECISION,
    level_id      VARCHAR(64),
    mark          VARCHAR(64),
    length_m      DOUBLE PRECISION,
    breadth_m     DOUBLE PRECISION,
    height_m      DOUBLE PRECISION,
    area_m2       DOUBLE PRECISION,
    volume_m3     DOUBLE PRECISION,
    CONSTRAINT pk_estimate_line PRIMARY KEY (id),
    CONSTRAINT fk_line_estimate  FOREIGN KEY (estimate_id)  REFERENCES estimate (id),
    CONSTRAINT fk_line_rate_item FOREIGN KEY (rate_item_id) REFERENCES rate_item (id),
    CONSTRAINT fk_line_level     FOREIGN KEY (level_id)     REFERENCES level (id)
);

-- Trades (LinkTradeRegistry)
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Masonry','Masonry','m³','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Plaster','Plastering','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Painting','Painting','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Flooring','Flooring','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Skirting','Skirting','m','Length');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Screed','Screed','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('VDF','VDF','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Waterproofing','Waterproofing','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('DPC','DPC','m','Length');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Coping','Coping','m','Length');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Parapet','Parapet','m','Length');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('PCC','PCC bed','m³','Volume');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('SSM','Size stone','m³','Volume');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Earthwork','Earthwork','m³','Volume');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Shuttering','Shuttering','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Plinth protection','Plinth protection','m²','Area');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Doors','Doors','nos','Count');
INSERT INTO trade(key,display,unit,default_basis) VALUES ('Windows','Windows','nos','Count');

-- Materials
INSERT INTO material(key,name,unit,category) VALUES ('CEMENT','Cement (OPC / PPC)','bags (50kg)','Binder');
INSERT INTO material(key,name,unit,category) VALUES ('FINE_AGG','Fine aggregate (sand)','m³','Aggregate');
INSERT INTO material(key,name,unit,category) VALUES ('COARSE_AGG','Coarse aggregate','m³','Aggregate');
INSERT INTO material(key,name,unit,category) VALUES ('WATER','Water','litre','Binder');
INSERT INTO material(key,name,unit,category) VALUES ('BRICK','Bricks (modular)','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('ACC_BLOCK','AAC / ACC blocks','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('CEM_BLOCK','Cement / concrete blocks','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('STEEL','Reinforcement steel','kg','Steel');
INSERT INTO material(key,name,unit,category) VALUES ('SIZE_STONE','Size stone','m³','Stone');

-- Mix designs + components
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M15','concrete','M15',1.54,'IS 456 nominal');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc1','CONC_M15','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc2','CONC_M15','FINE_AGG',2);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc3','CONC_M15','COARSE_AGG',4);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M20','concrete','M20',1.54,'IS 456 nominal');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc4','CONC_M20','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc5','CONC_M20','FINE_AGG',1.5);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc6','CONC_M20','COARSE_AGG',3);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M25','concrete','M25',1.54,'Nominal-style estimate');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc7','CONC_M25','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc8','CONC_M25','FINE_AGG',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc9','CONC_M25','COARSE_AGG',2);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M30','concrete','M30',1.54,'Estimate — use design mix on site');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc10','CONC_M30','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc11','CONC_M30','FINE_AGG',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc12','CONC_M30','COARSE_AGG',2);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M35','concrete','M35',1.54,'Estimate — design mix required');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc13','CONC_M35','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc14','CONC_M35','FINE_AGG',0.75);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc15','CONC_M35','COARSE_AGG',1.5);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CONC_M40','concrete','M40',1.54,'Estimate — design mix required');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc16','CONC_M40','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc17','CONC_M40','FINE_AGG',0.75);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc18','CONC_M40','COARSE_AGG',1.5);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CM_1_3','mortar','Cement mortar 1:3',1.33,'Cement mortar 1:3');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc19','CM_1_3','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc20','CM_1_3','FINE_AGG',3);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CM_1_4','mortar','Cement mortar 1:4',1.33,'Cement mortar 1:4');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc21','CM_1_4','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc22','CM_1_4','FINE_AGG',4);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('CM_1_6','mortar','Cement mortar 1:6',1.33,'Cement mortar 1:6');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc23','CM_1_6','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc24','CM_1_6','FINE_AGG',6);
INSERT INTO mix_design(key,kind,grade,dry_factor,note) VALUES ('PCC_1_4_8','pcc','PCC 1:4:8',1.33,'PCC 1:4:8');
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc25','PCC_1_4_8','CEMENT',1);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc26','PCC_1_4_8','FINE_AGG',4);
INSERT INTO mix_component(id,mix_key,material_key,parts) VALUES ('mc27','PCC_1_4_8','COARSE_AGG',8);

-- Item -> material edges
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm1','Masonry','BRICK',NULL,'Brick masonry — unit count incl. wastage');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm2','Masonry','ACC_BLOCK',NULL,'AAC/ACC block masonry — alternative unit');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm3','Masonry','CEM_BLOCK',NULL,'Concrete block masonry — alternative unit');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm4','Masonry','CEMENT','CM_1_6','Masonry mortar → cement');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm5','Masonry','FINE_AGG','CM_1_6','Masonry mortar → sand');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm6','Plaster','CEMENT','CM_1_3','Plaster mortar → cement');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm7','Plaster','FINE_AGG','CM_1_3','Plaster mortar → sand');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm8','PCC','CEMENT','PCC_1_4_8','PCC → cement');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm9','PCC','FINE_AGG','PCC_1_4_8','PCC → sand');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm10','PCC','COARSE_AGG','PCC_1_4_8','PCC → coarse aggregate');
INSERT INTO trade_material(id,trade_key,material_key,via_mix_key,note) VALUES ('tm11','SSM','SIZE_STONE',NULL,'Size-stone masonry — stone volume');

-- Linked-item derivation — standard library (LinkRuleBook.Defaults)
INSERT INTO link_rule(id,name,enabled,source_trade,target_trade,basis,factor,target_unit,per_item,rate_code,rate_override,notes) VALUES ('msn-plaster','Plaster from masonry (both faces)',TRUE,'Masonry','Plaster','Area',2,'m²',TRUE,'',0,'12 mm plaster on both faces of masonry walls.');
INSERT INTO link_rule(id,name,enabled,source_trade,target_trade,basis,factor,target_unit,per_item,rate_code,rate_override,notes) VALUES ('plaster-paint','Painting from plaster',TRUE,'Plaster','Painting','Area',1,'m²',TRUE,'',0,'Paint area follows plastered area 1:1.');
INSERT INTO link_rule(id,name,enabled,source_trade,target_trade,basis,factor,target_unit,per_item,rate_code,rate_override,notes) VALUES ('floor-skirting','Skirting from flooring perimeter',TRUE,'Flooring','Skirting','Perimeter',1,'m',TRUE,'',0,'Skirting run ≈ room perimeter (2·(L+B)). Adjust factor for door gaps.');
INSERT INTO link_rule(id,name,enabled,source_trade,target_trade,basis,factor,target_unit,per_item,rate_code,rate_override,notes) VALUES ('floor-screed','Screed bedding under flooring',FALSE,'Flooring','Screed','Area',1,'m²',TRUE,'',0,'Cement bedding/screed below floor finish. Enable if measured via this link.');
INSERT INTO link_rule(id,name,enabled,source_trade,target_trade,basis,factor,target_unit,per_item,rate_code,rate_override,notes) VALUES ('msn-dpc','DPC along masonry base',FALSE,'Masonry','DPC','Length',1,'m',TRUE,'',0,'Damp-proof course along wall length at plinth. Enable for plinth-level walls only.');
