// ─────────────────────────────────────────────────────────────────────────────
// AQC-Core — estimation data model (logical ERD / schema)
//
// Generated by SchemaExport.BuildDbml() from the live registries — do not hand-edit;
// regenerate from the app (Item links → Export ERD).
//
// Relational view of the model the app persists as JSON (.bbsproj, version 17).
// Two item relationships are modelled:
//   • derivation  — trade → link_rule → derived_item (masonry→plaster→paint)
//   • composition — trade/mix_design → material (concrete→cement+aggregates)
//
// Open: dbdiagram.io → New Diagram → Import → paste (DBML).
// ─────────────────────────────────────────────────────────────────────────────

Project aqc_core {
  database_type: 'Generic'
  Note: 'AQC-Core (Human Centric Works) — quantity take-off + costing. Two item relationships: quantities of one trade derive from another (masonry→plaster→paint, flooring→skirting), and items decompose into materials (concrete→cement+aggregates, masonry→bricks+mortar).'
}

// ── Reference / lookup ───────────────────────────────────────────────────────
Table trade {
  key           varchar [pk, note: 'Trade node key = CivilLine.Element, e.g. "Masonry"']
  display       varchar [note: 'UI label, e.g. "Plastering"']
  unit          varchar [note: 'm² | m³ | m | nos']
  default_basis varchar [note: 'Area | Volume | Length | Perimeter | Count']
  Note: '''
  The linkable trades — graph nodes of the derivation model (LinkTradeRegistry):
    • Masonry — Masonry (m³, Area)
    • Plaster — Plastering (m², Area)
    • Painting — Painting (m², Area)
    • Flooring — Flooring (m², Area)
    • Skirting — Skirting (m, Length)
    • Screed — Screed (m², Area)
    • VDF — VDF (m², Area)
    • Waterproofing — Waterproofing (m², Area)
    • DPC — DPC (m, Length)
    • Coping — Coping (m, Length)
    • Parapet — Parapet (m, Length)
    • PCC — PCC bed (m³, Volume)
    • SSM — Size stone (m³, Volume)
    • Earthwork — Earthwork (m³, Volume)
    • Shuttering — Shuttering (m², Area)
    • Plinth protection — Plinth protection (m², Area)
    • Doors — Doors (nos, Count)
    • Windows — Windows (nos, Count)
  '''
}

// ── Project & measurement ────────────────────────────────────────────────────
Table project {
  id             varchar [pk]
  name           varchar
  format_version int     [note: 'bbsproj schema version (17)']
}

Table level {
  id                 varchar [pk]
  project_id         varchar [ref: > project.id]
  name               varchar
  height_mm          int
  slab_thickness_mm  int
  beam_depth_mm      int
}

Table takeoff_item {
  id          varchar [pk]
  project_id  varchar [ref: > project.id]
  trade_key   varchar [ref: > trade.key]
  mark        varchar  [note: 'Item mark, e.g. MW1, C1']
  level_id    varchar [ref: > level.id, null]
  length_m    double
  breadth_m   double
  height_m    double
  area_m2     double
  volume_m3   double
  qty         double
  unit        varchar
  source      varchar  [note: 'manual | auto_wall | from_plaster | …']
  source_mark varchar  [note: 'Provenance: parent item this row derives from']
  notes       varchar
  Note: 'Unified measurement rows — one per item per trade sheet (masonry, plaster, flooring…).'
}

// ── Linked-item derivation engine (item → item) ──────────────────────────────
Table link_rule {
  id           varchar [pk]
  project_id   varchar [ref: > project.id]
  name         varchar
  enabled      boolean
  source_trade varchar [ref: > trade.key, note: 'Producer trade']
  target_trade varchar [ref: > trade.key, note: 'Consumer trade']
  basis        varchar [note: 'Area | Volume | Length | Perimeter | Count']
  factor       double  [note: 'target_qty = factor × source[basis]']
  target_unit  varchar
  per_item     boolean [note: 'true: one linked line per source item; false: one aggregate']
  rate_code    varchar [note: 'Optional pinned rate code']
  rate_override double [note: 'Optional manual unit rate']
  notes        varchar
  Note: '''
  A derivation edge — target quantity follows the source. Standard library (LinkRuleBook.Defaults):
    • Masonry → Plastering  (Area × 2)
    • Plastering → Painting  (Area × 1)
    • Flooring → Skirting  (Perimeter × 1)
    • Flooring → Screed  (Area × 1) [off]
    • Masonry → DPC  (Length × 1) [off]
  '''
}

Table derived_item {
  id           varchar [pk]
  rule_id      varchar [ref: > link_rule.id]
  source_trade varchar [ref: > trade.key]
  source_mark  varchar
  level_id     varchar [ref: > level.id, null]
  source_qty   double
  basis        varchar
  factor       double
  target_trade varchar [ref: > trade.key]
  target_qty   double
  target_unit  varchar
  chained      boolean [note: 'Source was itself produced by an upstream rule']
  Note: 'Engine output (computed by DerivationEngine). Logically a view over takeoff_item × link_rule.'
}

// ── Materials & composition (item → material) ────────────────────────────────
Table material {
  key      varchar [pk]
  name     varchar
  unit     varchar [note: 'bags | m³ | m | nos | kg | litre']
  category varchar [note: 'Binder | Aggregate | Unit | Steel | Stone']
  Note: '''
  Purchasable materials a work item resolves to (MaterialsCalculator / CivilBoqCalculator PO):
    • CEMENT — Cement (OPC / PPC) (bags (50kg))
    • FINE_AGG — Fine aggregate (sand) (m³)
    • COARSE_AGG — Coarse aggregate (m³)
    • WATER — Water (litre)
    • BRICK — Bricks (modular) (nos)
    • ACC_BLOCK — AAC / ACC blocks (nos)
    • CEM_BLOCK — Cement / concrete blocks (nos)
    • STEEL — Reinforcement steel (kg)
    • SIZE_STONE — Size stone (m³)
  '''
}

Table mix_design {
  key        varchar [pk]
  kind       varchar [note: 'concrete | mortar | pcc']
  grade      varchar [note: 'M15..M40 for concrete; a mix like 1:6 for mortar']
  dry_factor double  [note: 'Wet→dry volume factor (concrete 1.54, mortar 1.33)']
  note       varchar
  Note: '''
  Ratio recipes (MaterialsCalculator.MixFor / mortar mixes) — decompose into materials via
  mix_component. RCC concrete volume references a concrete grade here; steel is added directly.
  Concrete (dry factor 1.54, cement : fine : coarse):
    • CONC_M15 — M15 (1 : 2 : 4)
    • CONC_M20 — M20 (1 : 1.5 : 3)
    • CONC_M25 — M25 (1 : 1 : 2)
    • CONC_M30 — M30 (1 : 1 : 2)
    • CONC_M35 — M35 (1 : 0.75 : 1.5)
    • CONC_M40 — M40 (1 : 0.75 : 1.5)
  Mortar / PCC (dry factor 1.33):
    • CM_1_3 — Cement mortar 1:3 (1 : 3)
    • CM_1_4 — Cement mortar 1:4 (1 : 4)
    • CM_1_6 — Cement mortar 1:6 (1 : 6)
    • PCC_1_4_8 — PCC 1:4:8 (1 : 4 : 8)
  '''
}

Table mix_component {
  id           varchar [pk]
  mix_key      varchar [ref: > mix_design.key]
  material_key varchar [ref: > material.key]
  parts        double  [note: 'Proportion by volume, e.g. cement 1 : sand 1 : aggregate 2']
  Note: 'One material line of a mix. e.g. CONC_M25 → CEMENT 1, FINE_AGG 1, COARSE_AGG 2.'
}

Table trade_material {
  id           varchar [pk]
  trade_key    varchar [ref: > trade.key, note: 'The work item that consumes the material']
  material_key varchar [ref: > material.key]
  via_mix_key  varchar [ref: > mix_design.key, null, note: 'Set when consumed through a mix (masonry → CM_1_6 → cement+sand); null for direct units (masonry → bricks)']
  note         varchar
  Note: 'Item → material edge. Direct (masonry → bricks, size-stone → stone) or through a mix (masonry / plaster → mortar → cement + sand; PCC → pcc mix).'
}

// ── Rates & priced estimate ──────────────────────────────────────────────────
Table rate_book_version {
  id    varchar [pk]
  name  varchar
  notes varchar
}

Table rate_item {
  id          varchar [pk]
  version_id  varchar [ref: > rate_book_version.id]
  code        varchar [note: 'Stable rate code, e.g. MSN-BRICK-M3, PL-STD, PT-STD']
  category    varchar
  description varchar
  unit        varchar
  rate        double

  indexes {
    (version_id, code) [unique]
  }
}

Table estimate {
  id                   varchar [pk]
  project_id           varchar [ref: > project.id]
  rate_book_version_id varchar [ref: > rate_book_version.id]
  base_total           double
  grand_total          double
}

Table estimate_line {
  id           varchar [pk]
  estimate_id  varchar [ref: > estimate.id]
  rate_item_id varchar [ref: > rate_item.id, null]
  code         varchar
  category     varchar
  description  varchar
  unit         varchar
  qty          double
  rate         double
  amount       double
  level_id     varchar [ref: > level.id, null]
  mark         varchar
  length_m     double
  breadth_m    double
  height_m     double
  area_m2      double
  volume_m3    double
  Note: 'Priced BOQ line: qty × rate = amount. Qty flows from takeoff_item / derived_item.'
}
